added generator documentation